cocos2d-x-3.1  ???
    [FIX]           Label: may crash when using outline effect
    [FIX]           Label: using outline and invoking 'Director::setContentScaleFactor' cause label show nothing
    [FIX]           ProgressTo: will start from 0 when it reaches 100 
    [FIX]           Physics integration: may crashes if remove bodies at physics contact callback
    [FIX]           WP8: orientation is not correct when it is set to portrait
    [FIX]           WP8: fix for precompiled shaders and precompiled headers
    [FIX]           WP8: template supports orientation

cocos2d-x-3.1-rc0 May.18 2014
    [NEW]           Cocos2dxActivity: Adds a virtual method to load native libraries.
    [NEW]           Directory Structure: reorder some files within the cocos/ folder
    [NEW]           Sprite3D: a node that renders 3d models
    [NEW]           EditBox: support secure input on Mac

    [FIX]           ControlButton: cascade opacity and color error
    [FIX]           Director: twice calling of onExit
    [FIX]           Math: Vector2->Vec2, Vector3->Vec3, Vector4->Vec4, Matrix->Mat4
    [FIX]           GLProgram: uniform CC_Texture0 is pre-defined by cocos2d. MUST NOT be defined in shaders
    [FIX]           GLProgramState: Supports multitexturing
    [FIX]           Studio:ActionObject: correct TotalTime of ActionObject
    [FIX]           Studio: FrameData::copy doesn't copy `isTween` property

cocos2d-x-3.1-alpha1 May.9 2014
    [NEW]           Animate: Dispatch a custom event after an animation frame is displayed
    [NEW]           GLProgram: Easy to customize uniforms and attributes by using the new class GLProgramState
    [NEW]           Template: cpp project support Eclipse c++ project
    [NEW]           UI: add navigation support
    [NEW]           UI: add a widget to play video
    [NEW]           VS: support VS 2013

    [FIX]           Audio: pause sound automatically when go to background on Android