@@ -842,6 +842,9 @@ void TextField::copySpecialProperties(Widget *widget)
         setDetachWithIME(textField->getDetachWithIME());
         setInsertText(textField->getInsertText());
         setDeleteBackward(textField->getDeleteBackward());
+        _eventCallback = textField->_eventCallback;
+        _textFieldEventListener = textField->_textFieldEventListener;
+        _textFieldEventSelector = textField->_textFieldEventSelector;
     }
 }
     
