@@ -1,8 +1,9 @@
-cocos2d-x-3.1  ???
+cocos2d-x-3.1  May.24 2014
     [FIX]           Label: may crash when using outline effect
     [FIX]           Label: using outline and invoking 'Director::setContentScaleFactor' cause label show nothing
     [FIX]           ProgressTo: will start from 0 when it reaches 100 
     [FIX]           Physics integration: may crashes if remove bodies at physics contact callback
+    [FIX]           UIWidget: copyProperties() lost copy some properties
     [FIX]           WP8: orientation is not correct when it is set to portrait
     [FIX]           WP8: fix for precompiled shaders and precompiled headers
     [FIX]           WP8: template supports orientation
